force-app/main/default/objects/Survey_Order__mdt/Survey_Order__mdt.object-meta.xml
<CustomObject>
    <label>Survey Order</label>
    <pluralLabel>Survey Orders</pluralLabel>
</CustomObject>