force-app/main/default/objects/Survey_Order__mdt/fields/PCA__c.field-meta.xml
<CustomField>
    <fullName>PCA__c</fullName>
    <label>PCA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>