force-app/main/default/objects/Survey_Order__mdt/fields/PCA_VN__c.field-meta.xml
<CustomField>
    <fullName>PCA_VN__c</fullName>
    <label>PCA VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>