force-app/main/default/objects/Survey_Order__mdt/fields/Sales_VN__c.field-meta.xml
<CustomField>
    <fullName>Sales_VN__c</fullName>
    <label>Sales VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>