force-app/main/default/objects/Survey_Order__mdt/fields/Service_VN__c.field-meta.xml
<CustomField>
    <fullName>Service_VN__c</fullName>
    <label>Service VN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>